Performace tests extended to the SUT as wel as the tests.

--- a/performance_results/log_2_2.html
+++ b/performance_results/log_2_2.html
@@ -1735,25 +1735,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,0,0,0,[],[1,0,6153],[[2,3,0,0,[],[1,-138,5154],[],[[2,0,1,4,[],[1,0,5016],[[0,5,6,0,7,8,0,0,[1,0,1],[],[[1,2,9],[1,2,10]]],[0,11,6,0,12,13,0,0,[1,1,0],[],[[1,2,14]]],[0,15,6,0,16,17,0,0,[1,1,5012],[],[]],[0,18,6,0,19,0,20,0,[1,5013,1],[],[[5014,2,21]]],[0,22,6,0,23,24,0,0,[1,5015,1],[],[]]]]],[],[1,1,1,1]],[25,26,0,0,[],[1,1016,5138],[],[[25,0,1,4,[],[1,1146,5007],[[0,5,6,0,7,27,0,0,[1,1147,0],[],[[1147,2,28],[1147,2,10]]],[0,11,6,0,12,13,0,0,[1,1147,0],[],[[1147,2,14]]],[0,15,6,0,16,17,0,0,[1,1148,5004],[],[]],[0,18,6,0,19,0,20,0,[1,6153,0],[],[[6153,2,29]]],[0,22,6,0,23,24,0,0,[1,6153,0],[],[]]]]],[],[1,1,1,1]]],[],[],[2,2,2,2]];
+window.output["suite"] = [1,0,0,0,[],[1,0,5018],[[2,3,0,0,[],[1,-122,5140],[],[[2,0,1,4,[],[1,9,5009],[[0,5,6,0,7,8,0,0,[1,9,1],[],[[9,2,9],[9,2,10]]],[0,11,6,0,12,13,0,0,[1,10,0],[],[[10,2,14]]],[0,15,6,0,16,17,0,0,[1,10,5007],[],[]],[0,18,6,0,19,0,20,0,[1,5017,0],[],[[5017,2,21]]],[0,22,6,0,23,24,0,0,[1,5017,1],[],[]]]]],[],[1,1,1,1]],[25,26,0,0,[],[1,-130,5146],[],[[25,0,1,4,[],[1,0,5016],[[0,5,6,0,7,27,0,0,[1,1,0],[],[[1,2,28],[1,2,10]]],[0,11,6,0,12,13,0,0,[1,1,0],[],[[1,2,14]]],[0,15,6,0,16,17,0,0,[1,1,5011],[],[]],[0,18,6,0,19,0,20,0,[1,5013,2],[],[[5014,2,21]]],[0,22,6,0,23,24,0,0,[1,5015,0],[],[]]]]],[],[1,1,1,1]]],[],[],[2,2,2,2]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test Suite","*TC0","*/SUT/test/TC0.robot","*<p>Test using JSON POST data\x3c/p>","*Create Http Context","*HttpLibrary.HTTP","*<p>Sets the HTTP host to use for future requests. You must call this before issuing any HTTP requests.\x3c/p>","*sut0:8080","*Host for next HTTP request set to 'sut0:8080'","*Scheme for next HTTP request set to 'http'","*Set Request Body","*<p>Set the request body for the next HTTP request.\x3c/p>","*{\"data\": 110002}","*Request body set to \"{\"data\": 110002}\".","*POST","*<p>Issues a HTTP POST request.\x3c/p>","*/index.html","*Get Response Body","*<p>Get the response body.\x3c/p>","*${body}","*${body} = HTTP/1.0 200 OK\nServer: BaseHTTP/0.3 Python/2.7.18\nDate: Sun, 10 May 2020 13:24:37 GMT\nContent-type: text/html\n\n{\"returned\": 110002}","*Response Body Should Contain","*<p>Fails if the response body does not contain `should_contain`\x3c/p>","*{\"returned\": 110002}","*TC1","*/SUT/test/TC1.robot","*sut1:8081","*Host for next HTTP request set to 'sut1:8081'","*${body} = HTTP/1.0 200 OK\nServer: BaseHTTP/0.3 Python/2.7.18\nDate: Sun, 10 May 2020 13:24:38 GMT\nContent-type: text/html\n\n{\"returned\": 110002}"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test Suite","*TC0","*/SUT/test/TC0.robot","*<p>Test using JSON POST data\x3c/p>","*Create Http Context","*HttpLibrary.HTTP","*<p>Sets the HTTP host to use for future requests. You must call this before issuing any HTTP requests.\x3c/p>","*sut0:8080","*Host for next HTTP request set to 'sut0:8080'","*Scheme for next HTTP request set to 'http'","*Set Request Body","*<p>Set the request body for the next HTTP request.\x3c/p>","*{\"data\": 110002}","*Request body set to \"{\"data\": 110002}\".","*POST","*<p>Issues a HTTP POST request.\x3c/p>","*/index.html","*Get Response Body","*<p>Get the response body.\x3c/p>","*${body}","*${body} = HTTP/1.0 200 OK\nServer: BaseHTTP/0.3 Python/2.7.18\nDate: Sat, 16 May 2020 08:34:47 GMT\nContent-type: text/html\n\n{\"returned\": 110002}","*Response Body Should Contain","*<p>Fails if the response body does not contain `should_contain`\x3c/p>","*{\"returned\": 110002}","*TC1","*/SUT/test/TC1.robot","*sut1:8081","*Host for next HTTP request set to 'sut1:8081'"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:10","fail":0,"label":"Critical Tests","pass":2},{"elapsed":"00:00:10","fail":0,"label":"All Tests","pass":2}],[],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"Test Suite","name":"Test Suite","pass":2},{"elapsed":"00:00:05","fail":0,"id":"s1-s1","label":"Test Suite.TC0","name":"TC0","pass":1},{"elapsed":"00:00:05","fail":0,"id":"s1-s2","label":"Test Suite.TC1","name":"TC1","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:10","fail":0,"label":"Critical Tests","pass":2},{"elapsed":"00:00:10","fail":0,"label":"All Tests","pass":2}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Test Suite","name":"Test Suite","pass":2},{"elapsed":"00:00:05","fail":0,"id":"s1-s1","label":"Test Suite.TC0","name":"TC0","pass":1},{"elapsed":"00:00:05","fail":0,"id":"s1-s2","label":"Test Suite.TC1","name":"TC1","pass":1}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1589113477793;
+window.output["baseMillis"] = 1589614487987;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 3607194;
+window.output["generated"] = 3606109;
 </script>
 <script type="text/javascript">
 window.settings = {"defaultLevel":"TRACE","minLevel":"INFO","reportURL":"report.html","rpa":null,"splitLogBase":"log","title":""};
