--- a/performance_results/log_3_3.html
+++ b/performance_results/log_3_3.html
@@ -1735,25 +1735,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,0,0,0,[],[1,0,5592],[[2,3,0,0,[],[1,442,5151],[],[[2,0,1,4,[],[1,580,5012],[[0,5,6,0,7,8,0,0,[1,580,0],[],[[580,2,9],[580,2,10]]],[0,11,6,0,12,13,0,0,[1,581,0],[],[[581,2,14]]],[0,15,6,0,16,17,0,0,[1,581,5010],[],[]],[0,18,6,0,19,0,20,0,[1,5591,1],[],[[5591,2,21]]],[0,22,6,0,23,24,0,0,[1,5592,0],[],[]]]]],[],[1,1,1,1]],[25,26,0,0,[],[1,416,5151],[],[[25,0,1,4,[],[1,553,5014],[[0,5,6,0,7,27,0,0,[1,553,1],[],[[553,2,28],[553,2,10]]],[0,11,6,0,12,13,0,0,[1,554,0],[],[[554,2,14]]],[0,15,6,0,16,17,0,0,[1,554,5011],[],[]],[0,18,6,0,19,0,20,0,[1,5565,1],[],[[5566,2,21]]],[0,22,6,0,23,24,0,0,[1,5566,0],[],[]]]]],[],[1,1,1,1]],[29,30,0,0,[],[1,-154,5167],[],[[29,0,1,4,[],[1,0,5012],[[0,5,6,0,7,31,0,0,[1,0,1],[],[[1,2,32],[1,2,10]]],[0,11,6,0,12,13,0,0,[1,1,0],[],[[1,2,14]]],[0,15,6,0,16,17,0,0,[1,1,5009],[],[]],[0,18,6,0,19,0,20,0,[1,5011,0],[],[[5011,2,21]]],[0,22,6,0,23,24,0,0,[1,5012,0],[],[]]]]],[],[1,1,1,1]]],[],[],[3,3,3,3]];
+window.output["suite"] = [1,0,0,0,[],[1,0,5253],[[2,3,0,0,[],[1,-189,5207],[],[[2,0,1,4,[],[1,0,5017],[[0,5,6,0,7,8,0,0,[1,1,0],[],[[1,2,9],[1,2,10]]],[0,11,6,0,12,13,0,0,[1,1,1],[],[[2,2,14]]],[0,15,6,0,16,17,0,0,[1,2,5012],[],[]],[0,18,6,0,19,0,20,0,[1,5014,2],[],[[5015,2,21]]],[0,22,6,0,23,24,0,0,[1,5016,1],[],[]]]]],[],[1,1,1,1]],[25,26,0,0,[],[1,101,5153],[],[[25,0,1,4,[],[1,244,5009],[[0,5,6,0,7,27,0,0,[1,244,1],[],[[245,2,28],[245,2,10]]],[0,11,6,0,12,13,0,0,[1,245,0],[],[[245,2,14]]],[0,15,6,0,16,17,0,0,[1,245,5007],[],[]],[0,18,6,0,19,0,20,0,[1,5253,0],[],[[5253,2,21]]],[0,22,6,0,23,24,0,0,[1,5253,0],[],[]]]]],[],[1,1,1,1]],[29,30,0,0,[],[1,-15,5173],[],[[29,0,1,4,[],[1,148,5009],[[0,5,6,0,7,31,0,0,[1,148,1],[],[[149,2,32],[149,2,10]]],[0,11,6,0,12,13,0,0,[1,149,0],[],[[149,2,14]]],[0,15,6,0,16,17,0,0,[1,149,5007],[],[]],[0,18,6,0,19,0,20,0,[1,5157,0],[],[[5157,2,21]]],[0,22,6,0,23,24,0,0,[1,5157,0],[],[]]]]],[],[1,1,1,1]]],[],[],[3,3,3,3]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test Suite","*TC0","*/SUT/test/TC0.robot","*<p>Test using JSON POST data\x3c/p>","*Create Http Context","*HttpLibrary.HTTP","*<p>Sets the HTTP host to use for future requests. You must call this before issuing any HTTP requests.\x3c/p>","*sut0:8080","*Host for next HTTP request set to 'sut0:8080'","*Scheme for next HTTP request set to 'http'","*Set Request Body","*<p>Set the request body for the next HTTP request.\x3c/p>","*{\"data\": 110002}","*Request body set to \"{\"data\": 110002}\".","*POST","*<p>Issues a HTTP POST request.\x3c/p>","*/index.html","*Get Response Body","*<p>Get the response body.\x3c/p>","*${body}","*${body} = HTTP/1.0 200 OK\nServer: BaseHTTP/0.3 Python/2.7.18\nDate: Sun, 10 May 2020 13:25:59 GMT\nContent-type: text/html\n\n{\"returned\": 110002}","*Response Body Should Contain","*<p>Fails if the response body does not contain `should_contain`\x3c/p>","*{\"returned\": 110002}","*TC1","*/SUT/test/TC1.robot","*sut1:8081","*Host for next HTTP request set to 'sut1:8081'","*TC2","*/SUT/test/TC2.robot","*sut2:8082","*Host for next HTTP request set to 'sut2:8082'"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test Suite","*TC0","*/SUT/test/TC0.robot","*<p>Test using JSON POST data\x3c/p>","*Create Http Context","*HttpLibrary.HTTP","*<p>Sets the HTTP host to use for future requests. You must call this before issuing any HTTP requests.\x3c/p>","*sut0:8080","*Host for next HTTP request set to 'sut0:8080'","*Scheme for next HTTP request set to 'http'","*Set Request Body","*<p>Set the request body for the next HTTP request.\x3c/p>","*{\"data\": 110002}","*Request body set to \"{\"data\": 110002}\".","*POST","*<p>Issues a HTTP POST request.\x3c/p>","*/index.html","*Get Response Body","*<p>Get the response body.\x3c/p>","*${body}","*${body} = HTTP/1.0 200 OK\nServer: BaseHTTP/0.3 Python/2.7.18\nDate: Sat, 16 May 2020 08:35:45 GMT\nContent-type: text/html\n\n{\"returned\": 110002}","*Response Body Should Contain","*<p>Fails if the response body does not contain `should_contain`\x3c/p>","*{\"returned\": 110002}","*TC1","*/SUT/test/TC1.robot","*sut1:8081","*Host for next HTTP request set to 'sut1:8081'","*TC2","*/SUT/test/TC2.robot","*sut2:8082","*Host for next HTTP request set to 'sut2:8082'"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:15","fail":0,"label":"Critical Tests","pass":3},{"elapsed":"00:00:15","fail":0,"label":"All Tests","pass":3}],[],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"Test Suite","name":"Test Suite","pass":3},{"elapsed":"00:00:05","fail":0,"id":"s1-s1","label":"Test Suite.TC0","name":"TC0","pass":1},{"elapsed":"00:00:05","fail":0,"id":"s1-s2","label":"Test Suite.TC1","name":"TC1","pass":1},{"elapsed":"00:00:05","fail":0,"id":"s1-s3","label":"Test Suite.TC2","name":"TC2","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:15","fail":0,"label":"Critical Tests","pass":3},{"elapsed":"00:00:15","fail":0,"label":"All Tests","pass":3}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Test Suite","name":"Test Suite","pass":3},{"elapsed":"00:00:05","fail":0,"id":"s1-s1","label":"Test Suite.TC0","name":"TC0","pass":1},{"elapsed":"00:00:05","fail":0,"id":"s1-s2","label":"Test Suite.TC1","name":"TC1","pass":1},{"elapsed":"00:00:05","fail":0,"id":"s1-s3","label":"Test Suite.TC2","name":"TC2","pass":1}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1589113559062;
+window.output["baseMillis"] = 1589614545404;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 3606686;
+window.output["generated"] = 3606307;
 </script>
 <script type="text/javascript">
 window.settings = {"defaultLevel":"TRACE","minLevel":"INFO","reportURL":"report.html","rpa":null,"splitLogBase":"log","title":""};
